--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/ad1a271f15.js" crossorigin="anonymous"></script>
 </head>
-<body class="light-mode">
+<body class="light-mode" onload="getAllCountries()">
 <div class="wrapper">
     <div class="container">
         <div class="header">
