Added clear button into the search input

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <div class="search-container">
                     <i class="fa-solid fa-magnifying-glass"></i>
                     <input type="text" placeholder="Search for a country..." id="search" name="q" autofocus>
+                    <button id="clear-btn" style="display: none;">✖</button>
                 </div>
                 <div class="filter">
                     <select name="select-region" id="region">
