Fixed issue with no currency countries

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                     <select name="select-region" id="region">
                         <option value="" selected>All</option>
                         <option value="Africa">Africa</option>
+                        <option value="Antarctic">Antarctic</option>
                         <option value="Americas">Americas</option>
                         <option value="Asia">Asia</option>
                         <option value="Europe">Europe</option>
